--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!-- 
 	Copyright 2014 Git.Training
-	Some silly changes
+	The changes are from the feature
+	branch.
 -->
 <head>
-	<title>Silly changes</title>
+	<title>An Example Web Site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +17,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk -->
+	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now
+			Some interesting stuff
 		</p>
 	</main>
 	<footer class="container">
