--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- 
 	Copyright 2014 Git.Training
-	Adding changes before rebasing conflicts
+	Some silly changes
 -->
 <head>
-	<title>An Example Web Site</title>
+	<title>Silly changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk -->
 		<p>
-			Some interesting stuff
+			Just stuff for now
 		</p>
 	</main>
 	<footer class="container">
