Adding change after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!-- 
 	Copyright 2014 Git.Training
-	The changes are from the feature
-	branch.
+
 -->
 <head>
-	<title>An Example Web Site</title>
+	<title>An Example Web Site, in a repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
