Done with simple.html update

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 
 -->
 <head>
-	<title>An Example Web Site, in a repo</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Some interesting stuff
+			Adding more important content.
 		</p>
 	</main>
 	<footer class="container">
